changed logo link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="header__inner">
 
-          <a class="header__logo" href="/index.html">Portfolio</a>
+          <a class="header__logo" href="https://boginskajaanna.github.io/portfolio/">Portfolio</a>
           <nav class="header__nav">
             <ul class="header__list">
               <li class="header__item"><a href="#about" class="header__link">About me</a></li>
