--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="container">
           <div class="about__inner">
             <h2 class="about__title title">About me</h2>
-            <div class="about__inner">
+            <div class="about__info">
               <p class="about__text">
                 I completed a Frontend Development course at Genius Space from 2023 to 2024, where I acquired
                 foundational skills in website development.<br />
