--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hanna Kryvoruchko | Frontend developer</title>
+    <link rel="icon" href="./favicon.ico" sizes="32x32" />
+    <link rel="icon" type="image/svg+xml" href="./images/dist/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/dist/apple-touch-icon.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -10,7 +15,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.min.css" />
-    <title>Hanna Kryvoruchko | Frontend developer</title>
   </head>
   <body class="dark-theme">
     <header class="header">
@@ -140,15 +144,15 @@
             <h2 class="about__title title">About me</h2>
             <div class="about__info">
               <p class="about__text">
-                I completed a Frontend Development course at Genius Space from 2023 to 2024, where I acquired
-                foundational skills in website development.<br />
+                I completed a Frontend Development course at Genius Space, where I acquired foundational
+                skills in website development.<br />
                 During that time, I also participated in profile marathons and webinars at GoIT school to
                 improve my understanding.<br />Additionally, I continuously deepen my skills and refine them
                 through daily practice.
               </p>
               <p class="about__text">
                 Before that, I completed my Master's degree in Finance and Banking at Donetsk National
-                University from 2010 to 2015.
+                University.
               </p>
               <p class="about__text">
                 Regarding my soft skills, people say I am tactful, polite, and emotionally stable; in short -
@@ -219,7 +223,7 @@
                 <li class="technologies__additional-item">GSAP</li>
                 <li class="technologies__additional-item">Figma</li>
 
-                <li class="technologies__additional-item">ChatGPT</li>
+                <li class="technologies__additional-item">AI</li>
                 <li class="technologies__additional-item">TailwindCSS</li>
 
                 <li class="technologies__additional-item">Wordpress</li>
@@ -227,7 +231,7 @@
                 <li class="technologies__additional-item">Quick learning</li>
                 <li class="technologies__additional-item">Involvement</li>
                 <li class="technologies__additional-item">Teamwork</li>
-                <li class="technologies__additional-item">English Pre-Intermediate</li>
+                <li class="technologies__additional-item">English B1 Intermediate</li>
               </ul>
             </div>
           </div>
@@ -340,7 +344,7 @@
               <button class="feedback__form-button" type="submit">Send</button>
             </form>
             <p class="feedback__response" id="formResponse" style="display: none">
-              Your request has been submitted, I will contact you soon.
+              Your request has been submitted. <br />I will contact you soon.
             </p>
           </div>
         </div>
