--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hanna Kryvoruchko | Frontend developer</title>
-    <link rel="icon" href="./favicon.ico" sizes="32x32" />
+    <link rel="icon" href="./favicon.ico" sizes="32x32" type="image/x-icon"/>
     <link rel="icon" type="image/svg+xml" href="./images/dist/favicon.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="./images/dist/apple-touch-icon.png" />
 
